--- a/app/src/main/res/layout/messageboxnode.xml
+++ b/app/src/main/res/layout/messageboxnode.xml
@@ -5,18 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
-
-    <TextView
-        android:id="@+id/txtVNode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Créer un noeud"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
     <EditText
         android:id="@+id/editTxtNode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Something"
+        android:hint="Entrer un noeud"
         android:inputType="text" />
 </LinearLayout>
