--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fr.istic.graphes.MainActivity">
+    tools:context="bzh.dbs.graph.MainActivity">
 
 
-    <fr.istic.graphes.view.DrawableGraph
+    <bzh.dbs.graph.view.DrawableGraph
         android:id="@+id/graphG"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:contentDescription="TODO" />
-
-
 </RelativeLayout>
